--- a/config/operator/base/rbac/editor_role.yaml
+++ b/config/operator/base/rbac/editor_role.yaml
@@ -3,8 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/instance: dockerregistry-operator-editor-role
-    app.kubernetes.io/component: rbac
+    app.kubernetes.io/component: dockerregistry-operator-rbac
+    app.kubernetes.io/instance: dockerregistry-operator-editor-clusterrole
   name: operator-editor-role
 rules:
 - apiGroups:
