--- a/config/operator/base/rbac/role_binding.yaml
+++ b/config/operator/base/rbac/role_binding.yaml
@@ -2,8 +2,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/instance: dockerregistry-operator-rolebinding
-    app.kubernetes.io/component: rbac
+    app.kubernetes.io/component: dockerregistry-operator-rbac
+    app.kubernetes.io/instance: dockerregistry-operator-clusterrolebinding
   name: operator-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
