--- a/config/operator/base/rbac/service_account.yaml
+++ b/config/operator/base/rbac/service_account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
+    app.kubernetes.io/component: dockerregistry-operator-rbac
     app.kubernetes.io/instance: dockerregistry-operator-sa
-    app.kubernetes.io/component: rbac
   name: operator
   namespace: system
