--- a/config/operator/base/rbac/viewer_role.yaml
+++ b/config/operator/base/rbac/viewer_role.yaml
@@ -3,8 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/instance: dockerregistry-operator-viewer-role
-    app.kubernetes.io/component: rbac
+    app.kubernetes.io/instance: dockerregistry-operator-viewer-clusterrole
+    app.kubernetes.io/component: dockerregistry-operator-rbac
   name: operator-viewer-role
 rules:
 - apiGroups:
