--- a/config/docker-registry/templates/service.yaml
+++ b/config/docker-registry/templates/service.yaml
@@ -4,9 +4,9 @@ metadata:
   name: {{ template "docker-registry.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "docker-registry.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
+    {{- include "tplValue" ( dict "value" .Values.commonLabels "context" . ) | nindent 4 }}
+    app.kubernetes.io/instance: {{ template "fullname" . }}-svc
+    app.kubernetes.io/component: {{ template "fullname" . }}
     heritage: {{ .Release.Service }}
 {{- if .Values.service.annotations }}
   annotations:
