--- a/config/docker-registry/templates/deployment.yaml
+++ b/config/docker-registry/templates/deployment.yaml
@@ -6,9 +6,9 @@ metadata:
   name: {{ template "docker-registry.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "docker-registry.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
+    {{- include "tplValue" ( dict "value" .Values.commonLabels "context" . ) | nindent 4 }}
+    app.kubernetes.io/instance: {{ template "fullname" . }}-deployment
+    app.kubernetes.io/component: {{ template "fullname" . }}
 spec:
   selector:
     matchLabels:
