--- a/config/docker-registry/templates/priorityclass.yaml
+++ b/config/docker-registry/templates/priorityclass.yaml
@@ -2,6 +2,10 @@ apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
 metadata:
   name: {{ .Values.dockerregistryPriorityClassName }}
+  labels:
+    {{- include "tplValue" ( dict "value" .Values.commonLabels "context" . ) | nindent 4 }}
+    app.kubernetes.io/instance: {{ template "fullname" . }}-priorityclass
+    app.kubernetes.io/component: {{ template "fullname" . }}
 value: {{ .Values.dockerregistryPriorityClassValue }}
 globalDefault: false
 description: "Scheduling priority of dockerregistry components. By default, dockerregistry components should not be blocked by unschedulable user workloads."
