--- a/config/docker-registry/templates/secret.yaml
+++ b/config/docker-registry/templates/secret.yaml
@@ -5,10 +5,10 @@ metadata:
   name: {{ template "docker-registry.fullname" . }}-secret
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "docker-registry.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    {{- include "tplValue" ( dict "value" .Values.commonLabels "context" . ) | nindent 4 }}
+    app.kubernetes.io/instance: {{ template "fullname" . }}-secret
+    app.kubernetes.io/component: {{ template "fullname" . }}
     heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
 type: Opaque
 data:
   {{- if eq .Values.storage "azure" }}
