--- a/config/docker-registry/templates/virtualservice.yaml
+++ b/config/docker-registry/templates/virtualservice.yaml
@@ -10,9 +10,9 @@ metadata:
   name: {{ template "docker-registry.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "docker-registry.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
+    {{- include "tplValue" ( dict "value" .Values.commonLabels "context" . ) | nindent 4 }}
+    app.kubernetes.io/instance: {{ template "fullname" . }}-virtualservice
+    app.kubernetes.io/component: {{ template "fullname" . }}
 spec:
   gateways:
   - "{{ .Values.virtualService.gateway }}"
