--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -76,6 +76,16 @@ podAnnotations:
   sidecar.istio.io/inject: "false"
 podLabels: {}
 
+commonLabels:
+  app: '{{ template "docker-registry.name" . }}'
+  version: "main"
+  helm.sh/chart: '{{ include "chart" . }}'
+  kyma-project.io/module: '{{ template "docker-registry.name" . }}'
+  app.kubernetes.io/name: '{{ template "docker-registry.name" . }}'
+  app.kubernetes.io/version: "main"
+  app.kubernetes.io/part-of: '{{ template "docker-registry.name" . }}'
+  app.kubernetes.io/managed-by: "Helm"
+
 persistence:
   accessMode: "ReadWriteOnce"
   enabled: true
