--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -16,7 +16,6 @@ images:
     directory: "prod"
 dockerregistryPriorityClassValue: 2000000
 dockerregistryPriorityClassName: "dockerregistry-priority"
-
 dockerRegistry:
   username: "{{ randAlphaNum 20 | b64enc }}" # for gcr "_json_key"
   password: "{{ randAlphaNum 40 | b64enc }}" # for gcr data from json key
@@ -25,13 +24,11 @@ dockerRegistry:
   #  This is the server address of the registry which will be used to create docker configuration.
   serverAddress: ""
 replicaCount: 1
-
 updateStrategy:
   type: Recreate
   rollingUpdate: null
   #   maxSurge: 1
   #   maxUnavailable: 0
-
 image:
   pullPolicy: IfNotPresent
 # imagePullSecrets:
@@ -50,16 +47,15 @@ ingress:
   # Used to create an Ingress record.
   hosts:
     - chart-example.local
-  annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
   labels: {}
   tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+  # Secrets must be manually created in the namespace.
+  # - secretName: chart-example-tls
+  #   hosts:
+  #     - chart-example.local
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -71,11 +67,9 @@ resources:
   requests:
     cpu: 10m
     memory: 300Mi
-
 podAnnotations:
   sidecar.istio.io/inject: "false"
 podLabels: {}
-
 commonLabels:
   app: '{{ template "docker-registry.name" . }}'
   version: "main"
@@ -85,18 +79,15 @@ commonLabels:
   app.kubernetes.io/version: "main"
   app.kubernetes.io/part-of: '{{ template "docker-registry.name" . }}'
   app.kubernetes.io/managed-by: "Helm"
-
 persistence:
   accessMode: "ReadWriteOnce"
   enabled: true
   size: 20Gi
   # storageClass: '-'
   # existingClaim: ""
-
 # set the type of filesystem to use: filesystem, s3.
 # If filesystem is used, you should also add it to configData, below
 storage: filesystem
-
 # Set this to name of secret for tls certs
 # tlsSecretName: registry.docker.example.com
 
@@ -162,7 +153,6 @@ configData: # example: https://github.com/docker/distribution/blob/master/cmd/re
       enabled: true
       interval: 10s
       threshold: 3
-
 containers:
   # the following guidelines should be followed for this https://github.com/kyma-project/community/tree/main/concepts/psp-replacement
   securityContext:
@@ -172,7 +162,6 @@ containers:
       drop: ["ALL"]
     procMount: default # Optional. The default is false if the entry is not there.
     readOnlyRootFilesystem: true # Mandatory
-
 initContainers:
   # the following guidelines should be followed for this https://github.com/kyma-project/community/tree/main/concepts/psp-replacement
   securityContext:
@@ -186,7 +175,6 @@ initContainers:
       add: ["CHOWN"]
     procMount: default # Optional. The default is false if the entry is not there.
     readOnlyRootFilesystem: true # Mandatory
-
 pod:
   # the following guidelines should be followed for this https://github.com/kyma-project/community/tree/main/concepts/psp-replacement
   securityContext:
@@ -195,24 +183,18 @@ pod:
     fsGroup: 1000
     seccompProfile: # Optional. This option can also be set on container level but it is recommended to set it on Pod level and leave it undefined on container level.
       type: RuntimeDefault
-
-podDisruptionBudget:
-  {}
-  # maxUnavailable: 1
-  # minAvailable: 2
+podDisruptionBudget: {}
+# maxUnavailable: 1
+# minAvailable: 2
 
 nodeSelector: {}
-
 tolerations: []
-
 secrets:
   haSharedSecret: "secret"
   htpasswd: "generated-in-init-container"
-
 extraVolumeMounts:
   - name: htpasswd-data
     mountPath: /data
-
 extraVolumes:
   - name: registry-credentials
     secret:
@@ -226,9 +208,7 @@ extraVolumes:
     emptyDir: {}
 nameOverride:
 fullnameOverride: "dockerregistry"
-
 destinationRule:
   enabled: true
-
 rollme: "{{ randAlphaNum 5}}"
 registryHTTPSecret: "{{ randAlphaNum 16 | b64enc }}"
