--- a/config/operator/base/deployment/deployment.yaml
+++ b/config/operator/base/deployment/deployment.yaml
@@ -23,6 +23,7 @@ spec:
         app.kubernetes.io/component: dockerregistry-operator.kyma-project.io
         sidecar.istio.io/inject: "false"
     spec:
+      priorityClassName: "operator-priority"
       securityContext:
         runAsNonRoot: true
       containers:
