--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -1,12 +1,17 @@
 module-name: docker-registry
 rc-tag: 0.2.0
-protecode:
+kind: kyma
+bdba:
   - europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:main
   - europe-docker.pkg.dev/kyma-project/prod/external/library/registry:2.8.3-v1
   - europe-docker.pkg.dev/kyma-project/prod/registry-init:v20240506-57d31b1d
-whitesource:
+mend:
   language: golang-mod
-  subprojects: false
+  exclude:
+    - "**/test/**"
+    - "**/*_test.go"
+checkmarx-one:
+  preset: go-default
   exclude:
     - "**/test/**"
     - "**/*_test.go"
