--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,8 +1,4 @@
-# These are the default owners for the whole content of the `dockerregistry` repository. The default owners are automatically added as reviewers when you open a pull request unless different owners are specified in the file.
-* @kyma-project/otters
+# Repo owners list
 
-# All files and subdirectories in /docs
-/docs/ @kyma-project/technical-writers
-
-# All .md files
+* @kyma-project/otters-dev
 *.md @kyma-project/technical-writers
