--- a/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
+++ b/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
@@ -11,3 +11,4 @@ configMapGenerator:
       app.kubernetes.io/instance: cli-dockerregistry-operator
       app.kubernetes.io/name: dockerregistry-operator
       kyma-cli/extension: resource
+      kyma-cli/extension-version: v1
