migrate coreCommands to actionCommands

--- a/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
+++ b/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
@@ -3,7 +3,8 @@ configMapGenerator:
   namespace: kube-public
   files:
   - rootCommand
-  - coreCommands
+  - coreCommands # backward compatibility
+  - actionCommands
   options:
     disableNameSuffixHash: true
     labels:
