--- a/config/docker-registry/files/kyma-commands.yaml
+++ b/config/docker-registry/files/kyma-commands.yaml
@@ -13,18 +13,18 @@ subCommands:
   - type: bool
     name: "push-reg-addr"
     description: "Get external registry push address only"
-    configPath: ".pushRegAddrOnly"
     default: "false"
   - type: bool
     name: "pull-reg-addr"
     description: "Get external registry address used to pull images"
-    configPath: ".pullRegAddrOnly"
     default: "false"
   - type: string
     name: "output"
     description: "Path where the output file should be saved to. NOTE: docker expects the file to be named 'config.json'"
-    configPath: ".output"
   with:
+    pushRegAddrOnly: ${{  .flags.pushregaddr.value }}
+    pullRegAddrOnly: ${{  .flags.pullregaddr.value }}
+    output: ${{  .flags.output.value }}
     useExternal: true
 
 - metadata:
@@ -36,18 +36,18 @@ subCommands:
   - type: bool
     name: "push-reg-addr"
     description: "Get in-cluster registry address only"
-    configPath: ".pushRegAddrOnly"
     default: "false"
   - type: bool
     name: "pull-reg-addr"
     description: "Get in-cluster registry address used to pull images by Kubernetes only"
-    configPath: ".pullRegAddrOnly"
     default: "false"
   - type: string
     name: "output"
     description: "Path where the output file should be saved to. NOTE: docker expects the file to be named 'config.json'"
-    configPath: ".output"
   with:
+    pushRegAddrOnly: ${{  .flags.pushregaddr.value }}
+    pullRegAddrOnly: ${{  .flags.pullregaddr.value }}
+    output: ${{  .flags.output.value }}
     useExternal: false
 
 - metadata:
@@ -57,4 +57,5 @@ subCommands:
   uses: registry_image_import
   args:
     type: string
-    configPath: ".image"
+  with:
+    image: ${{ .args.value}}
