--- a/.github/workflows/promote-to-release-channel.yaml
+++ b/.github/workflows/promote-to-release-channel.yaml
@@ -69,7 +69,7 @@ jobs:
           git checkout -B "${MODULE_VERSION}-${CHANNEL}" upstream/main
 
           mkdir -p modules/docker-registry/${CHANNEL}
-          cp ../module-config.yaml modules/docker-registry/${CHANNEL}/${MODULE_VERSION}/module-config.yaml
+          cp ../module-config.yaml modules/docker-registry/${MODULE_VERSION}/module-config.yaml
           
           git add .
           git commit -m "promote docker registry ${MODULE_VERSION} to ${CHANNEL} channel"
