--- a/components/operator/Dockerfile
+++ b/components/operator/Dockerfile
@@ -4,7 +4,9 @@
 
 
 # Build the operator binary
-FROM europe-docker.pkg.dev/kyma-project/prod/external/library/golang:1.24.4-alpine3.22 AS builder
+FROM --platform=$BUILDPLATFORM europe-docker.pkg.dev/kyma-project/prod/external/library/golang:1.24.4-alpine3.22 AS builder
+ARG TARGETOS
+ARG TARGETARCH
 
 WORKDIR /workdir
 
@@ -19,7 +21,7 @@ RUN go mod download
 COPY components/operator components/operator
 
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o operator ./components/operator/main.go
+RUN CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o operator ./components/operator/main.go
 
 
 # Use distroless as minimal base image to package the operator binary
