--- a/components/registry-init/Dockerfile
+++ b/components/registry-init/Dockerfile
@@ -1,4 +1,4 @@
-FROM europe-docker.pkg.dev/kyma-project/prod/external/library/alpine:3.22.0
+FROM --platform=$BUILDPLATFORM europe-docker.pkg.dev/kyma-project/prod/external/library/alpine:3.22.0
 
 RUN set -ex \
     && apk upgrade --no-cache \
