--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -8,7 +8,7 @@ containerRegistry:
 images:
   registry:
     name: "registry"
-    version: "2.8.3-v1"
+    version: "3.0.0"
     directory: "prod/external/library"
   registry_init:
     name: "registry-init"
