--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -1,7 +1,7 @@
 module-name: docker-registry
 kind: kyma
 bdba:
-  - europe-docker.pkg.dev/kyma-project/prod/external/library/registry:2.8.3-v1
+  - europe-docker.pkg.dev/kyma-project/prod/external/library/registry:3.0.0
   - europe-docker.pkg.dev/kyma-project/prod/registry-init:v20240506-57d31b1d
   - europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:main
 mend:
