update config mount path to be consisent with the new defult

--- a/config/docker-registry/templates/deployment.yaml
+++ b/config/docker-registry/templates/deployment.yaml
@@ -84,7 +84,7 @@ spec:
           command:
           - /bin/registry
           - serve
-          - /etc/docker/registry/config.yml
+          - /etc/distribution/config.yml
           ports:
             - containerPort: 5000
           livenessProbe:
@@ -205,7 +205,7 @@ spec:
               mountPath: /var/lib/registry/
 {{- end }}
             - name: "{{ template "docker-registry.fullname" . }}-config"
-              mountPath: "/etc/docker/registry"
+              mountPath: "/etc/distribution"
 {{- if .Values.tlsSecretName }}
             - mountPath: /etc/ssl/docker
               name: tls-cert
