remove deprecated swift supoort

--- a/config/docker-registry/templates/secret.yaml
+++ b/config/docker-registry/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or (eq .Values.storage "azure") (eq .Values.storage "s3") (eq .Values.storage "swift") (eq .Values.storage "gcs")}}
+{{- if or (eq .Values.storage "azure") (eq .Values.storage "s3") (eq .Values.storage "gcs")}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -21,11 +21,6 @@ data:
     {{- if and .Values.secrets.s3.secretKey .Values.secrets.s3.accessKey }}
   s3AccessKey: {{ .Values.secrets.s3.accessKey | b64enc | quote }}
   s3SecretKey: {{ .Values.secrets.s3.secretKey | b64enc | quote }}
-    {{- end }}
-  {{- else if eq .Values.storage "swift" }}
-    {{- if and .Values.secrets.swift.username .Values.secrets.swift.password }}
-  swiftUsername: {{ .Values.secrets.swift.username | b64enc | quote }}
-  swiftPassword: {{ .Values.secrets.swift.password | b64enc | quote }}
     {{- end }}
   {{- else if eq .Values.storage "gcs" }}
     {{- if .Values.secrets.gcs.accountkey }}
