--- a/config/docker-registry/templates/deployment.yaml
+++ b/config/docker-registry/templates/deployment.yaml
@@ -183,6 +183,7 @@ spec:
             - name: REGISTRY_STORAGE_GCS_CHUNKSIZE
               value: {{ .Values.gcs.chunkSize}}
             {{- end }}
+{{ - end }}
           volumeMounts:
 {{- if eq .Values.storage "filesystem" }}
             - name: data
