--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -86,6 +86,10 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.ref_name }} # checkout to latest branch changes ( by default this action checkouts to the SHA that triggers action )
 
+      - uses: ./.github/actions/setup-modulectl
+        with:
+          path: "/usr/local/bin"
+
       - name: Create changelog
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
