--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -103,12 +103,12 @@ jobs:
           RELEASE_ID=$(./.github/scripts/create-draft-release.sh ${{ github.event.inputs.name }})
           echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
-      - name: Render module-config
+      - name: Render community-module-config
         env:
           MODULE_VERSION: ${{ github.event.inputs.name }}
         run: |
           make community-module-config
-          echo "==== module-config ==="
+          echo "==== community-module-config ==="
           cat module-config.yaml
 
       - name: Create release assets
