chore: bump istio deps together

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,9 @@ updates:
       k8s-io:
         patterns:
           - "k8s.io/*"
+      istio:
+        patterns:
+          - "istio.io/*"
 
   - package-ecosystem: "docker"
     directory: "/components/operator"
