Change module template link

--- a/module-config-template.yaml
+++ b/module-config-template.yaml
@@ -2,7 +2,7 @@ name: kyma-project.io/module/docker-registry
 version:
 defaultCR:
 manifest:
-documentation: "https://kyma-project.io/#/docker-registry/user/README"
+documentation: "https://help.sap.com/docs/btp/sap-business-technology-platform-internal/docker-registry-module"
 repository: https://github.com/kyma-project/docker-registry.git
 security: sec-scanners-config.yaml
 manager:
