--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -150,7 +150,7 @@ containers:
     allowPrivilegeEscalation: false
     capabilities:
       drop: ["ALL"]
-    procMount: default # Optional. The default is false if the entry is not there.
+    procMount: Default # Optional. The default is false if the entry is not there.
     readOnlyRootFilesystem: true # Mandatory
 initContainers:
   # the following guidelines should be followed for this https://github.com/kyma-project/community/tree/main/concepts/psp-replacement
@@ -163,7 +163,7 @@ initContainers:
     capabilities:
       drop: ["ALL"]
       add: ["CHOWN"]
-    procMount: default # Optional. The default is false if the entry is not there.
+    procMount: Default # Optional. The default is false if the entry is not there.
     readOnlyRootFilesystem: true # Mandatory
 pod:
   # the following guidelines should be followed for this https://github.com/kyma-project/community/tree/main/concepts/psp-replacement
