--- a/.github/workflows/_integration-tests.yaml
+++ b/.github/workflows/_integration-tests.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: compute github commit sha
         id: vars
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      - uses: kyma-project/terraform-module/.github/actions/create-sap-btp-kyma@2edb264e0f701fc93af4fb35eaeb7b8b3c05e493
+      - uses: kyma-project/terraform-module/.github/actions/create-sap-btp-kyma@1.0.0
         id: create-btp-resources
         with:
           btp_subaccount_name: dockerregistry-test-${{ steps.vars.outputs.sha_short }}-${{ github.run_attempt }}
@@ -73,7 +73,7 @@ jobs:
       - if: ${{ always() }}
         uses: ./.github/actions/collect-cluster-info
 
-      - uses: kyma-project/terraform-module/.github/actions/force-delete-sap-btp-subaccount@2edb264e0f701fc93af4fb35eaeb7b8b3c05e493
+      - uses: kyma-project/terraform-module/.github/actions/force-delete-sap-btp-subaccount@1.0.0
         if: always()
         with:
           btp_subaccount_id: ${{ steps.create-btp-resources.outputs.subaccount_id }}
