--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -249,7 +249,7 @@ spec:
               state:
                 description: |-
                   State signifies current state of DockerRegistry.
-                  Value can be one of ("Ready", "Processing", "Error", "Deleting").
+                  Value can be one of ("Ready", "Processing", "Error", "Deleting", "Warning").
                 enum:
                 - Processing
                 - Deleting
