--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -263,6 +263,9 @@ spec:
             required:
             - served
             type: object
+        required:
+        - metadata
+        - spec
         type: object
     served: true
     storage: true
