--- a/.github/workflows/publish-new-version.yaml
+++ b/.github/workflows/publish-new-version.yaml
@@ -56,27 +56,27 @@ jobs:
         working-directory: module-manifests
         run: |
           git fetch upstream
-          git checkout -B "${MODULE_VERSION}" upstream/main
+          git checkout -B "docker-registry-${MODULE_VERSION}" upstream/main
 
           mkdir -p modules/docker-registry/${MODULE_VERSION}
           cp ../module-config.yaml modules/docker-registry/${MODULE_VERSION}/module-config.yaml
           
           git add .
           git commit -m "promote docker registry ${MODULE_VERSION}"
-          git push origin "${MODULE_VERSION}" -f
+          git push origin "docker-registry-${MODULE_VERSION}" -f
 
       - name: Create PullRequest to module-manifests
         working-directory: module-manifests
         run: |
           prs=$(gh pr list -R "https://${GH_TOOLS_REPO_URL}/kyma/module-manifests" -A "${BOT_USERNAME}" --state open --json headRefName)
 
-          if  echo $prs | jq -e ".[] | select(.headRefName==\"${MODULE_VERSION}\")"; then
+          if  echo $prs | jq -e ".[] | select(.headRefName==\"docker-registry-${MODULE_VERSION}\")"; then
               echo "opened PR already exists, no need to create new one, PR will be updated by push from previous step"
               exit 0
           fi
 
           gh pr create -B main --fill \
-            -H "${BOT_USERNAME}:${MODULE_VERSION}" \
+            -H "${BOT_USERNAME}:docker-registry-${MODULE_VERSION}" \
             -R "https://${GH_TOOLS_REPO_URL}/kyma/module-manifests/" \
             --title "Promote Docker Registry ${MODULE_VERSION}" \
-            --body "https://github.com/kyma-project/docker-registry/actions/${{github.run_id}}"
+            --body "Adding Docker Registry [${MODULE_VERSION}](https://github.com/kyma-project/docker-registry/releases/tag/${MODULE_VERSION})
