--- a/tests/btp/k8s-resources/simple-app/apirule.yaml
+++ b/tests/btp/k8s-resources/simple-app/apirule.yaml
@@ -1,20 +1,16 @@
-apiVersion: gateway.kyma-project.io/v1beta1
+apiVersion: gateway.kyma-project.io/v2
 kind: APIRule
 metadata:
   name: simple-app-api
 spec:
-  gateway: kyma-gateway.kyma-system.svc.cluster.local
-  host: simple-app
+  gateway: kyma-system/kyma-gateway
+  hosts:
+    - simple-app
+  rules:
+    - methods:
+        - GET
+      noAuth: true
+      path: /*
   service:
     name: simple-app-service
-    namespace: default
     port: 80
-  rules:
-    - path: /.*
-      methods: ["GET"] 
-      accessStrategies:
-      - handler: noop
-    - path: /.*
-      methods: ["POST"]
-      accessStrategies:
-      - handler: noop
